[package]
name = "arbitrary-int"
version = "1.2.7"
edition = "2021"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>", "Daniel Lehmann <danlehmannmuc@gmail.com>"]
description = "Modern and lightweight implementation of u1, u2, ..., u127 / i2, i3, ..., i127"
license = "MIT"
repository = "https://github.com/vhdirk/arbitrary-int"
readme = "README.md"
keywords = ["integer", "unaligned", "misaligned"]
categories = ["embedded", "no-std", "data-structures"]

[features]
default = ["std", "128"]

"128" = []
std = ["num-traits?/std", "serde?/std", "funty?/std"]


# core::fmt::Step is currently unstable and is available on nightly behind a feature gate
step_trait = []
generic_const_exprs = []

schemars = ["dep:schemars", "std"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false, optional = true }
funty = { version = "2.0.0", default-features = false, optional = true }
defmt = { version = "0.3.8", optional = true }
serde = { version = "1.0", optional = true, default-features = false }
borsh = { version = "1.5.1", optional = true, features = ["unstable__schema"], default-features = false }
schemars = { version = "0.8.21", optional = true, features = ["derive"], default-features = false }

forward_ref_generic = "0.2.1"
const_for = "0.1.5"
seq-macro = "0.3.5"
paste = "1.0.15"

[dev-dependencies]
serde_test = "1.0"
